# mender-api

./: .gitignore  Cargo.toml  README.md
.cargo/: confi.toml
.github/workflows/: rust.yaml
api/: Cargo.toml
api/src/: api.rs  artifacts.rs  client.rs  deployments.rs  dev_auth.rs  device_proxy.rs  devices.rs  dto.rs  groups.rs  lib.rs  login.rs  pager.rs  pagination.rs  paging.rs  releases.rs  session.rs  tags.rs  util.rs  utils.rs
api/src/api/: api_version.rs  deployments.rs  devauth.rs  devices.rs  dto.rs  endpoint.rs  groups.rs  inventory.rs  login.rs  management.rs  mender_server.rs  pager.rs  releases.rs  session.rs  user_adm.rs
api/src/api/devices/: list.rs  proxy.rs
api/src/api/devices/list/: as_str.rs  attribute.rs  bootloader_integration.rs  country.rs  one_or_many.rs  rootfs_type.rs  scope.rs  status.rs  value.rs
api/src/api/dto/: artifact.rs  attribute.rs  bootloader_integration.rs  country.rs  deployments.rs  device_type.rs  devices.rs  releases.rs  rootfs_type.rs
api/src/api/dto/artifact/: dependency.rs  file.rs  info.rs  type_info.rs  update.rs
api/src/api/dto/attribute/: value.rs
api/src/api/dto/deployments/: kind.rs  list.rs  new.rs  status.rs
api/src/api/dto/devices/: group.rs
api/src/api/dto/types/: as_str.rs  mac_address.rs  one_or_many.rs
api/src/api/user_adm/: authentication.rs
api/src/dev_auth/: session.rs
api/src/devices/: proxy.rs
api/src/dto/: artifact.rs  attribute.rs  authentification_set.rs  bootloader_integration.rs  country.rs  deployment.rs  dev_auth.rs  device.rs  device_type.rs  devices.rs  groups.rs  identity.rs  release.rs  releases.rs  rootfs_type.rs  status.rs  tag.rs  types.rs
api/src/dto/artifact/: dependency.rs  file.rs  info.rs  type_info.rs  update.rs
api/src/dto/attribute/: known_attribute.rs  scope.rs  status.rs  unknown_attribute.rs  value.rs
api/src/dto/deployment/: list.rs  new.rs  put.rs  status.rs
api/src/dto/deployments/: list.rs
api/src/dto/device/: group.rs
api/src/dto/devices/: group.rs
api/src/dto/types/: as_str.rs  one_or_many.rs
api/src/pagination/: pager.rs  pages.rs  paginated_iterator.rs
api/src/paging/: page_iterator.rs  paged_iterator.rs  pager.rs  pages.rs
api/src/util/: join_path.rs
api/src/utils/: as_str.rs  pem_certificate.rs  response_ext.rs
cfg/: Cargo.toml
cfg/src/: config_args.rs  lib.rs
cli/: Cargo.toml
cli/src/: args.rs  main.rs  util.rs
cli/src/args/: artifact_action.rs  deployments_action.rs  device_action.rs  device_proxy_action.rs  group_action.rs  release_action.rs
cli/src/args/device_proxy_action/: tags_action.rs
mender-api-cfg/src/: config.rs  config_args.rs  config_file.rs  lib.rs
prototype/: Cargo.toml
prototype/src/: args.rs  main.rs  or_bail.rs  util.rs
