[package]
name = "mender-free-ext"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
macaddr = { version = "1.0.1", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
uuid = { version = "1.17.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
semver = { version = "1.0.26", features = ["serde"] }
ipnet = { version = "2.11.0", features = ["serde"] }
log = "0.4.27"
