[package]
name = "mender-api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
macaddr = { version = "1.0", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.17", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
ipnet = { version = "2.11", features = ["serde"] }
log = "0.4"
clap = { version = "4.5", optional = true }

[lints]
workspace = true

[features]
clap = ["dep:clap"]
