[package]
name = "mender-api-cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
macaddr = "1.0"
mender-api = { path = "../api", features = ["clap"] }
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "macros"] }
uuid = "1.17"

[lints]
workspace = true