[package]
name = "prototype"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
log = "0.4.27"
mender-free-ext = { path = "../api" }
reqwest = "0.12.22"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }

[lints]
workspace = true
